# samples-cpp

./: LICENSE.md  README.md
cmake_compiler_settings/: CMakeLists.txt  main.cpp
cmake_compiler_settings/cmake/: clang_flags.cmake  gcc_flags.cmake  msvc_flags.cmake  windows_flags.cmake
daemon/: CMakeLists.txt  README.md  daemon.hpp  daemon.service  main.cpp  signals.hpp
documentation/: CMakeLists.txt
documentation/doc/: Doxyfile.in  dependencies.cmake  doxygen.cmake
documentation/src/: lib.cpp  lib.hpp  main.cpp
documentation/src/hierarchy/: diagrams_a.hpp  diagrams_b.hpp  diagrams_c.hpp  diagrams_d.hpp  diagrams_e.hpp
hello_world/: CMakeLists.txt
helloworld/: CMakeLists.txt  readme.md
minimal_mfc/: CMakeLists.txt  Main.hpp  README.md  main.cpp  main.hpp  mydialog.cpp  mydialog.hpp  readme.md  resource.h  resource.rc
minimal_mfc_async/: CMakeLists.txt  README.md  main.cpp  main.hpp  mydialog.cpp  mydialog.hpp  readme.md  resource.h  resource.rc
minimal_qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
minimalmfc/: main.cpp  mydialog.cpp  mydialog.hpp  resource.rc
mpi_hello_world/: CMakeLists.txt  README.md  main.cpp
mpi_pi/: CMakeLists.txt  README.md  main.cpp
setup/: CMakeLists.txt  changelog.txt  license.txt  license_debian.txt
setup/lib/: CMakeLists.txt  lib.cpp  lib.hpp
setup/src/: CMakeLists.txt  main.cpp
smartcard/: CMakeLists.txt  main.cpp  pcsc.hpp
static_analysis/: CMakeLists.txt
static_analysis/cmake/: FindBinScope.cmake  FindCppcheck.cmake  FindFlawfinder.cmake  FindPscan.cmake  FindRats.cmake
static_analysis/src/: main.cpp
streams/: CMakeLists.txt  streams.hpp  test.cpp
